Remove backticks from link reference that are not rendered

--- a/Documentation/git-absorb.1
+++ b/Documentation/git-absorb.1
@@ -156,7 +156,7 @@ is at fault, please [file an issue][]\&.
 .RS 4
 .\}
 .nf
-[`GIT_SEQUENCE_EDITOR`]: https://stackoverflow\&.com/a/29094904
+[GIT_SEQUENCE_EDITOR]: https://stackoverflow\&.com/a/29094904
 [file an issue]: https://github\&.com/tummychow/git\-absorb/issues/new
 .fi
 .if n \{\
