Add --no-limit option
disables stack limit,
so revwalk reaches first merge commit, or other author, or actual root

this is basically --root, but isn't named --root because
--no-limit doesn't automatically mean your absorb base is the root commit
because you can't absorb through a merge,
or other author without the --force-author flag

but it means that absorb stack will go as far as possible,
allowing linear histories to even reach real root commit

should be used carefully in case theres like 100k commits
without any merges and from a single author...

Closes: #118
Signed-off-by: p1k0chu <p1k0chu.vim@gmail.com>

--- a/Documentation/git-absorb.adoc
+++ b/Documentation/git-absorb.adoc
@@ -51,6 +51,15 @@ FLAGS
 --dry-run::
         Don't make any actual changes
 
+--no-limit::
+        Remove absorb stack limit. Has no effect when used with `--base`
+        +
+        This will consider all commits until
+        either root, merge commit, or a commit by other author
+        (unless `--force-author` is used)
+        +
+        Which is why you should be careful when using this flag.
+
 --force-author::
         Generate fixups to commits not made by you
 
@@ -152,6 +161,8 @@ edit your local or global `.gitconfig` and add the following section:
 [absorb]
     maxStack=50 # Or any other reasonable value for your project
 .............................................................................
+
+Stack size can also be disabled temporarily for one command (see `--no-limit`)
 
 ONE FIXUP PER FIXABLE COMMIT
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
